# MiptCompMath

./: .gitignore  lab6_plotters.ipynb  plotters.py  solvers.py  task1.ipynb  task2.ipynb  task3.ipynb  task4.ipynb  task5.ipynb  task6.ipynb  task6_1.ipynb  task6_1_rs.ipynb  task6_2.ipynb  task6_3.ipynb  task7_1.ipynb  task7_2.ipynb  task8_1.ipynb  task8_16.ipynb
comp_math_rs/: Cargo.toml  test.csv
comp_math_rs/src/: adams_method.rs  algebraic_equation_solvers.rs  backward_differentiation_method.rs  boundary_problem.rs  cauchy_problem.rs  equation_solvers.rs  lbp_test.rs  main.rs  matrix_operations.rs  newton_boundary_method.rs  nordsieck_method.rs  nordsieck_test.rs  parameterized_function.rs  pde_problem.rs  pde_solvers.rs  phase_sl_method.rs  runge_kutta_method.rs  shooting_method.rs  shooting_sl_method.rs  solvers.rs  sturm_liuville_problem.rs  task6_2.rs  task7_1.rs  task7_2.rs  task8_1.rs  task8_16.rs  tridiagonal_method.rs  utils.rs
task6_2_data/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  21.csv  22.csv  23.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  Explicit Adams methof of order: 2.csv  Explicit Adams methof of order: 3.csv  Explicit Adams methof of order: 4.csv  Explicit Backward differentiation method of order: 2.csv  Implicit Adams method of order: 3.csv  Implicit Adams method of order: 4.csv  Kutta's third-order method, order: 4, type: Explicit.csv
task7_1_data/: newton_method.csv  shooting_method.csv
task7_2_data/: 10.csv  12.csv  14.csv  16.csv  20.csv  22.csv  24.csv  26.csv  28.csv  (+8 more)
(+99 files in other folders)
