[package]
name = "comp_math_rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "task6_2"
path = "src/task6_2.rs"

[[bin]]
name = "task7_1"
path = "src/task7_1.rs"

[[bin]]
name = "task7_2"
path = "src/task7_2.rs"

[[bin]]
name = "lbp_test"
path = "src/lbp_test.rs"

# [[bin]]
# name = "nordsieck_test"
# path = "src/nordsieck_test.rs"

[dependencies]
