[package]
name = "comp_math_rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "task6_2"
path = "src/task6_2.rs"

[[bin]]
name = "task7_1"
path = "src/task7_1.rs"

[[bin]]
name = "task7_2"
path = "src/task7_2.rs"

[[bin]]
name = "task8_1"
path = "src/task8_1.rs"

[[bin]]
name = "task8_16"
path = "src/task8_16.rs"

[[bin]]
name = "lbp_test"
path = "src/lbp_test.rs"

[dependencies]
